--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@metamask/snaps-types": "^3.1.0",
+    "@metamask/snaps-ui": "^3.1.0",
     "dotenv": "^16.3.1",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
