--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ensdomains/thorin": "^0.6.44",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
@@ -19,7 +21,9 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.19.0",
-    "sort-by": "^1.2.0"
+    "react-transition-state": "1.1.5",
+    "sort-by": "^1.2.0",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
